# voxplorerJS

./: BACKEND_SETUP.md  todo.md
.github/: copilot-instructions.md
backend/: app.py  pyproject.toml  requirements.txt
backend/routes/: __init__.py  data.py  features.py  reduction.py
backend/schemas/: __init__.py  requests.py
backend/tests/: __init__.py  conftest.py  test_data.py  test_features.py  test_reduction.py
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: index.ts
frontend/src/components/AudioUpload/: index.tsx
frontend/src/components/DimensionalityReductionOpts/: index.tsx
frontend/src/components/Navbar/: index.tsx
frontend/src/components/PlotViewer/: index.tsx
frontend/src/components/Processing/: index.tsx
frontend/src/components/TablePreview/: index.tsx
frontend/src/components/TableUpload/: index.tsx
frontend/src/pages/: Home.tsx  Visualiser.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/stores/: appStore.ts
frontend/src/styles/: main.css
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
