[project]
name = "voxplorer-api"
version = "0.1.0"
description = "FastAPI backend for Voxplorer - interactive voice data visualization and analysis"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.0",
    # Data processing
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "scikit-learn>=1.6.1",
    # Audio processing
    "librosa>=0.10.2.post1",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "speechbrain>=1.0.2",
    # Dimensionality reduction
    "umap-learn>=0.5.7",
    # Utilities
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.3",
    "ipython>=9.0.2",
    "ruff>=0.11.12",
]
